--- a/src/phonology/inventory/IPA_tables.html
+++ b/src/phonology/inventory/IPA_tables.html
@@ -4,10 +4,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <p>Highlighted Table</p>
-        <table id="Highlighted"></table>
         <p id="expander">Expand/Collapse</p>
+        <table id="IPA-table"></table>
+        <table id="places"></table>
+        <table id="manners"></table>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="data.json"></script>
         <script src="IPA.js"></script>
     </body>
 </html>
