added in phonemes and made names a bit better

--- a/src/phonology/inventory/index.html
+++ b/src/phonology/inventory/index.html
@@ -12,6 +12,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="data.json"></script>
-        <script src="IPA.js"></script>
+        <script src="ipa-chart.js"></script>
     </body>
 </html>
